--- a/lol-api/package.json
+++ b/lol-api/package.json
@@ -20,6 +20,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router": "^3.0.5",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "sequelize": "^4.8.3"
