--- a/lol-api/package.json
+++ b/lol-api/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon ./bin/www",
+    "start:server": "nodemon ./bin/www",
     "start:client": "webpack-dev-server --inline",
+    "start:dev": "npm run start:server | npm run start:client",
     "build": "webpack -p --config=webpack.prod.js"
   },
   "keywords": [],
