--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:server": "nodemon ./server/index.js",
     "init:db": "sequelize db:migrate:undo:all && sequelize db:migrate && python ./initdb.py",
     "start:client": "webpack-dev-server --inline",
-    "start": "npm run start:server & npm run start:client",
+    "start": "npm run start:server",
     "build": "webpack -p --config=webpack.prod.js"
   },
   "keywords": [],
