--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "6.1.0"
+  },
   "scripts": {
     "start:server": "nodemon ./server/index.js",
     "init:db": "sequelize db:migrate:undo:all && sequelize db:migrate && python ./initdb.py",
