--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6.1.0"
   },
   "scripts": {
-    "start:server": "nodemon ./server/index.js",
+    "start:server": "node ./server/index.js",
     "init:db": "sequelize db:migrate:undo:all && sequelize db:migrate && python ./initdb.py",
     "start:client": "webpack-dev-server --inline",
     "start": "npm run start:server",
