--- a/server/config/config.json
+++ b/server/config/config.json
@@ -13,11 +13,11 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "production": {
-    "username": "sib",
-    "password": "firetruck321",
-    "database": "lol",
-    "host": "127.0.0.1",
+  "development": {
+    "username": "postgres",
+    "password": "8d15d8f9dac527ff900cc8c73eb132ab",
+    "database": "nyazna_postgres",
+    "host": "dokku-postgres-nyazna-postgres",
     "dialect": "postgres"
   }
 }
