--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": "6.1.0"
+    "node": "6.1.0",
+    "npm": "5.0.3"
   },
   "scripts": {
     "start:server": "node ./server/index.js",
