--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "8d15d8f9dac527ff900cc8c73eb132ab",
-    "database": "nyazna_postgres",
-    "host": "dokku-postgres-nyazna-postgres",
+    "username": "sib",
+    "password": "firetruck321",
+    "database": "postgres",
+    "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
@@ -13,11 +13,8 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "development": {
-    "username": "postgres",
-    "password": "8d15d8f9dac527ff900cc8c73eb132ab",
-    "database": "nyazna_postgres",
-    "host": "dokku-postgres-nyazna-postgres",
-    "dialect": "postgres"
+  "production": {
+      "use_env_variable": "DATABASE_URL",
+      "dialect": "postgres"
   }
 }
