changed connection config

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -15,7 +15,8 @@
   },
   "production": {
       "database": "nyazna_postgres",
-      "host": "dokku-postgres-nyazna-postgres",
+      "host": "172.17.0.2",
+      "port": "5432",
       "username": "postgres",
       "password": "8d15d8f9dac527ff900cc8c73eb132ab",
       "dialect": "postgres"
