--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "request": "^2.82.0",
+    "sequelize-cli": "latest",
     "sequelize": "^4.8.3"
   },
   "devDependencies": {
