update readme with api endopoints, dev/ build instructions

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "init:db": "sequelize db:migrate:undo:all && sequelize db:migrate && python ./initdb.py",
     "start:client": "webpack-dev-server --inline",
     "start": "npm run start:server",
+    "dev": "npm run start:server | npm run start:client",
     "build": "webpack -p --config=webpack.prod.js"
   },
   "keywords": [],
