--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "5.2.0"
   },
   "scripts": {
-    "start:server": "node ./server/index.js",
+    "start:server": "nodemon ./server/index.js",
     "init:db": "sequelize db:migrate:undo:all && sequelize db:migrate && python ./initdb.py",
     "start:client": "webpack-dev-server --inline",
     "start": "npm run start:server",
@@ -33,7 +33,6 @@
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "request": "^2.82.0",
-    "sequelize-cli": "latest",
     "sequelize": "^4.8.3"
   },
   "devDependencies": {
