moved stats endpoint to a col in champs

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "sib",
     "password": "firetruck321",
-    "database": "postgres",
+    "database": "lol",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
