--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jshint-loader": "^0.8.4",
     "node-sass": "^4.5.3",
     "nodemon": "^1.12.0",
+    "react-lazyload": "^2.2.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
