--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": "6.1.0",
-    "npm": "5.2.0"
+    "node": "6.1.0"
   },
   "scripts": {
     "start:server": "node ./server/index.js",
